src/components/Projects/Projects.module.css
.section {
	justify-content: center;
	align-items: center;
	flex-direction: column;
	display: flex;
	width: 100%;
	gap: 50px;
}

.content {
	display: flex;
	gap: 40px;
	flex-direction: column;
	width: 100%;
	align-items: center;
}

.card {
	height: 450px;
	width: 340px;
	background-color: #e4e6e7;
	border-radius: 16px;
	position: relative;
	overflow: hidden;
	display: flex;
	flex-direction: column;
}

.imageWrapper {
	position: relative;
	width: 100%;
	height: 260px;
}

.image {
	object-fit: cover;
	position: absolute;
	width: 100%;
	min-height: 100%;
	height: auto;
	top: 0px;
	left: 0px;
	bottom: 0px;
	right: 0px;
}

.imageWrapper:hover .overlay {
	height: 100%;
}

.overlay {
	position: absolute;
	width: 100%;
	background-color: rgba(0, 0, 0, 0.8);
	backdrop-filter: blur(2px);
	bottom: 0;
	left: 0;
	right: 0;
	overflow: hidden;
	height: 0;
	border-top-left-radius: 16px;
	border-top-right-radius: 16px;
	transition: 0.2s ease;
	display: flex;
	justify-content: center;
	align-items: center;
}

.cardDetail {
	text-align: center;
	max-width: 100%;
	margin-top: 15px;
	margin-bottom: 15px;
	margin-left: 20px;
	margin-right: 20px;
	display: flex;
	flex-direction: column;
	justify-content: space-between;
	flex-grow: 1;
}

.cardDetail > h3 {
	color: black;
	margin: 0;
}

.tags {
	display: flex;
	list-style: none;
	padding: 0;
	width: 100%;
	align-items: center;
	justify-content: center;
	gap: 8px;
	margin: 0px;
}

.tags > li {
	background-color: var(--primary);
	font-size: 12px;
	height: 15px;
	vertical-align: middle;
	padding-left: 12px;
	padding-right: 12px;
	border-radius: 10px;
	font-weight: 400;
}

.cardDetail > p {
	max-width: 100%;
	text-wrap: wrap;
	font-weight: 500;
	font-size: 12px;
	line-height: 20px;
	color: var(--text-color);
	margin: 0px;
}

.linkContainer {
	display: flex;
	width: 100%;
	justify-content: center;
	align-items: center;
	gap: 24px;
}

.linkContainer > a {
	color: #031821;
}

.linkContainer > a:hover {
	color: var(--primary);
}

@media (min-width: 1024px) {
	.content {
		flex-direction: row;
		justify-content: space-between;
	}

	.card {
		width: 340px;
	}
}

